--- a/vignettes/ProFound-TipsTricks.Rmd
+++ b/vignettes/ProFound-TipsTricks.Rmd
@@ -13,7 +13,8 @@ vignette: >
 
 ```{r}
 library(ProFound)
-library(FITSio)
+library(Rfits)
+library(Rwcs)
 ```
 
 ## General advice
@@ -43,7 +44,7 @@ Useful things and suggested settings:
 ## Some examples:
 
 ```{r, eval=FALSE}
-image=readFITS(system.file("extdata", 'VIKING/mystery_VIKING_Z.fits', package="ProFound"))
+image = Rfits_read_image(system.file("extdata", 'VIKING/mystery_VIKING_Z.fits', package="ProFound"))
 ```
 
 ```{r, fig.width=8, fig.height=8, eval=FALSE}
@@ -60,13 +61,14 @@ profound=profoundProFound(image, magzero=30, plot=TRUE, roughpedestal = TRUE)
 Some different data:
 
 ```{r, eval=FALSE}
-GALEX_NUV=readFITS(system.file("extdata", 'GALEX_NUV.fits', package="magicaxis"))
-VST_r=readFITS(system.file("extdata", 'VST_r.fits', package="magicaxis"))
-VISTA_K=readFITS(system.file("extdata", 'VISTA_K.fits', package="magicaxis"))
+GALEX_NUV = Rfits_read_image(system.file("extdata", 'GALEX_NUV.fits', package="magicaxis"))
+VST_r = Rfits_read_image(system.file("extdata", 'VST_r.fits', package="magicaxis"))
+VISTA_K = Rfits_read_image(system.file("extdata", 'VISTA_K.fits', package="magicaxis"))
 
 # Warp to common WCS:
-GALEX_NUV_VST=magwarp(GALEX_NUV, VST_r$hdr)$image
-VISTA_K_VST=magwarp(VISTA_K, VST_r$hdr)$image
+library(ProPane)
+GALEX_NUV_VST = propaneWarp(GALEX_NUV, keyvalues_out=VST_r$keyvalues)$imDat
+VISTA_K_VST = propaneWarp(VISTA_K, keyvalues_out=VST_r$keyvalues)$imDat
 
 multi=profoundMultiBand(inputlist=list(GALEX_NUV_VST, VST_r$imDat, VISTA_K_VST),
 magzero=c(20.08,0,30), detectbands=c('r','K'), multibands=c('NUV','r','K'))
