--- a/vignettes/ProFound-Blender.Rmd
+++ b/vignettes/ProFound-Blender.Rmd
@@ -27,6 +27,8 @@ Over the years **ProFound** has developed a few distinct and competing approache
 
 In late 2025 I developed a new elliptical aperture routine built in **Rcpp** that is extremely fast (faster than the equivalent SExtractor code) and can even be threaded with OpenMP. As well as offering proper circular and elliptical aperture photometry, it offers a few useful approaches for de-blending sources across hard pixel bouandaries, i.e. it can fractional distribute flux between an arbitrarily large number of sources that appear to overlap. Much like SExtractor, we can estimate the properties of the ellipses to use from the naive segment-based **profoundProFound** source extraction.
 
+## Resolved Data Example
+
 First let us make. a mock image where we have a ground truth for some reasonable looking galaxies. To do this we will use **ProFit**, one of the core **ProTools* software packages that is used for generating and fitting 2D light profiles of many sources.
 
 ```{r}
@@ -129,3 +131,102 @@ legend('topleft', legend=c('Segment','Pro De-blend', 'Ellip De-blend'), col=c('b
 ```
 
 There is not a lot in it, but I would argue based on the above the newer Elliptical de-blending scheme does a little better than either the standard **profoundProFound** segment based scheme, or the 'fit' method of de-blending that is available within the function. So I guess that's the conclusion- use it if you want better de-blending.
+
+It's interesting to note that expanding the apertures has little affect on the flux with the de-blending being used in this way, since so little distant flux will be claimed by an expanded aperture. This suggests that when used in this mode, users should consider inflating their apertures a bit to guarantee all the available flux is attributed to each object. The caveat there is you start adding noise, but for extended sources the bigger error tends to be aperture systematics rather than sky noise.
+
+As you can see, the nominal apertures now massively overlap on sky, but the de-blending weighting helps to control this:
+
+```{r, fig.width=8, fig.height=8}
+magimage(ExampleImage) #for reference to see where profoundProFound is putting the apertures
+
+magimage(profoundEllipWeight(ellip_ref$xcen, ellip_ref$ycen,
+  ellip_ref$R100*2, ellip_ref$ang, ellip_ref$axrat, dimx = 1000, dimy = 1000))
+
+magimage(profoundEllipWeight(ellip_ref$xcen, ellip_ref$ycen,
+  ellip_ref$R100*2, ellip_ref$ang, ellip_ref$axrat, dimx = 1000, dimy = 1000, wt=ellip_ref$flux, rad_re=ellip_ref$R50))
+```
+
+```{r}
+ellip_flux_deblend_big =  profoundEllipFlux(ExampleImage, ellip_ref$xcen, ellip_ref$ycen,
+  ellip_ref$R100*2, ellip_ref$ang, ellip_ref$axrat, deblend=TRUE, wt=ellip_ref$flux, rad_re=ellip_ref$R50)
+ellip_mag_deblend_big = profoundFlux2Mag(ellip_flux_deblend_big)
+```
+
+Overall the performance of the larger apertures is very similar:
+
+```{r}
+magplot(model_core[pro_match$nn.idx[,1] > 0,"mag"], model_core[pro_match$nn.idx[,1] > 0,"mag"] - ellip_mag_deblend[pro_match$nn.idx[,1]],
+        xlim=c(15,21), ylim=c(-0.2,0.2), col='blue', xlab='ProFound - True [mag]', ylab='PDF')
+points(model_core[pro_match$nn.idx[,1] > 0,"mag"], model_core[pro_match$nn.idx[,1] > 0,"mag"] - ellip_mag_deblend_big[pro_match$nn.idx[,1]],
+       col='darkgreen')
+legend('topleft', legend=c('Ellip De-blend', 'Ellip De-blend Big'), col=c('blue','darkgreen'), pch=1)
+```
+
+```{r, fig.width=8}
+magplot(density(model_core[pro_match$nn.idx[,1] > 0,"mag"] - ellip_mag_deblend[pro_match$nn.idx[,1]]),
+        col='blue', xlab='ProFound - True [mag]', ylab='PDF', xlim=c(-0.2,0.2), ylim=c(0,23))
+lines(density(model_core[pro_match$nn.idx[,1] > 0,"mag"] - ellip_mag_deblend_big[pro_match$nn.idx[,1]]), col='darkgreen')
+legend('topleft', legend=c('Ellip De-blend', 'Ellip De-blend Big'), col=c('blue','darkgreen'), pch=1)
+```
+
+## Unresolved Data Example
+
+When fitting totally unresolved data, **ProFound** already comes with **profoundFitMagPSF**. This correctly deblends flux into objects using the known PSF of the image.
+
+```{r}
+s250_im = Rfits_read_image(system.file("extdata", 'IRdata/s250_im.fits',
+                                       package="ProFound"))
+s250_psf = Rfits_read_image(system.file("extdata",'IRdata/s250_psf.fits',
+                                        package="ProFound"))$imDat
+
+magzero_s250=11.68
+
+pro_s250=profoundProFound(s250_im, pixcut=1, skycut=2, ext=1, redosky=FALSE, iters=1,
+                          tolerance=0, sigma=0, magzero=magzero_s250)
+pro_s250$segstats=pro_s250$segstats[!is.na(pro_s250$segstats$mag),]
+
+newmag=profoundFitMagPSF(RAcen=pro_s250$segstats$RAcen, Deccen=pro_s250$segstats$Deccen,
+                         image=s250_im, psf=s250_psf, doProFound=TRUE, findextra=TRUE, verbose=TRUE, redosky=FALSE,
+                         magzero=magzero_s250)
+```
+
+It is worth noting how similar a job we can do using the new **profoundAperFlux** function that makes use of profile based source de-blending.
+
+First we need to specifying some properties of the PSF:
+
+```{r, fig.width=8, fig.height=8}
+R50 = 2 #Re in pixels
+R100 = 19 #Maximum radius to use for the apertures
+
+magimage(s250_im$imDat, qdiff=TRUE)
+
+magimage(profoundAperWeight(newmag$psfstats$xcen, newmag$psfstats$ycen,
+  R100, dimx = 120, dimy = 120))
+
+magimage(profoundAperWeight(newmag$psfstats$xcen, newmag$psfstats$ycen,
+  R100, dimx = 120, dimy = 120, rad_re=R50, nser=0.5))
+```
+
+```{r}
+#The above FitMagPSF fit suggests a sky pedestal should be added to the image:
+
+sky = sum(newmag$image - newmag$finalmodel)/(120^2)
+
+newflux_db = profoundAperFlux(s250_im$imDat - sky, newmag$psfstats$xcen, newmag$psfstats$ycen,
+  R100, deblend=TRUE)
+newmag_db = profoundFlux2Mag(newflux_db, magzero=magzero_s250)
+
+newflux_re = profoundAperFlux(s250_im$imDat - sky, newmag$psfstats$xcen, newmag$psfstats$ycen,
+  R100, rad_re=R50, nser=0.5, deblend=TRUE)
+newmag_re = profoundFlux2Mag(newflux_re, magzero=magzero_s250)
+
+wt = newmag$psfstats$flux
+wt[is.na(wt)] = 0
+newflux_wt = profoundAperFlux(s250_im$imDat - sky, newmag$psfstats$xcen, newmag$psfstats$ycen,
+  R100, rad_re=R50, nser=0.5, wt=wt, deblend=TRUE)
+newmag_wt = profoundFlux2Mag(newflux_wt, magzero=magzero_s250)
+```
+
+```{r}
+magplot(newmag$psfstats$mag, newmag$psfstats$mag - newmag_wt, xlim=c(11,18), ylim=c(-2,2))
+```
