--- a/vignettes/ProFound-Blender.Rmd
+++ b/vignettes/ProFound-Blender.Rmd
@@ -17,6 +17,10 @@ knitr::opts_chunk$set(
 ```
 
 ```{r}
+evalglobal=FALSE
+```
+
+```{r}
 library(ProFound)
 library(ProFit)
 library(RANN)
@@ -31,7 +35,7 @@ In late 2025 I developed a new elliptical aperture routine built in **Rcpp** tha
 
 First let us make. a mock image where we have a ground truth for some reasonable looking galaxies. To do this we will use **ProFit**, one of the core \*\*ProTools\* software packages that is used for generating and fitting 2D light profiles of many sources.
 
-```{r}
+```{r, eval=evalglobal}
 ExamplePSF = profitMakePointSource()
 
 set.seed(1)
@@ -65,18 +69,18 @@ ExampleImage = ExampleImage + rnorm(1e6, sd=1e-12)
 
 First let us run a vanilla version of **profoundProFound** on this and see how we do:
 
-```{r, fig.width=8, fig.height=8}
+```{r, fig.width=8, fig.height=8, eval=evalglobal}
 pro_out = profoundProFound(ExampleImage, deblend=TRUE, plot=TRUE)
 ```
 
 Find the matching sources:
 
-```{r}
+```{r, eval=evalglobal}
 pro_match = nn2(pro_out$segstats[,c("xcen", "ycen")], model_core[,c("xcen","ycen")],
                 searchtype='radius', radius=2)
 ```
 
-```{r, fig.width=8, fig.height=6}
+```{r, fig.width=8, fig.height=6, eval=evalglobal}
 magplot(model_core[pro_match$nn.idx[,1] > 0,"mag"], model_core[pro_match$nn.idx[,1] > 0,"mag"] - pro_out$segstats[pro_match$nn.idx[,1],"mag"],
         ylim=c(-0.2,0.2), xlab='True [mag]', ylab='ProFound - True [mag]')
 points(model_core[pro_match$nn.idx[,1] > 0,"mag"], model_core[pro_match$nn.idx[,1] > 0,"mag"] - pro_out$segstats[pro_match$nn.idx[,1],"mag_db"],
@@ -88,7 +92,7 @@ Now we will try the newer elliptical based routine in **ProFound**. Notice we st
 
 First, for fun, we ccan look at the weight map that is used internally with and without profile scaling:
 
-```{r, fig.width=8, fig.height=8}
+```{r, fig.width=8, fig.height=8, eval=evalglobal}
 ellip_ref = pro_out$segstats[,c("flux", "xcen", "ycen", "R50", "R100",  "ang", "axrat")]
 
 magimage(ExampleImage) #for reference to see where profoundProFound is putting the apertures
@@ -100,7 +104,7 @@ magimage(profoundEllipWeight(ellip_ref$xcen, ellip_ref$ycen,
   ellip_ref$R100, ellip_ref$ang, ellip_ref$axrat, dimx = 1000, dimy = 1000, wt=ellip_ref$flux, rad_re=ellip_ref$R50))
 ```
 
-```{r}
+```{r, eval=evalglobal}
 ellip_flux_deblend =  profoundEllipFlux(ExampleImage, ellip_ref$xcen, ellip_ref$ycen,
   ellip_ref$R100, ellip_ref$ang, ellip_ref$axrat, deblend=TRUE, wt=ellip_ref$flux, rad_re=ellip_ref$R50)
 ellip_mag_deblend = profoundFlux2Mag(ellip_flux_deblend)
@@ -110,7 +114,7 @@ Re the above routine, it is a very focussed Rcpp level function (basically all C
 
 Now we can compare all three approaches to the ground truth:
 
-```{r, fig.width=8, fig.height=6}
+```{r, fig.width=8, fig.height=6, eval=evalglobal}
 magplot(model_core[pro_match$nn.idx[,1] > 0,"mag"], model_core[pro_match$nn.idx[,1] > 0,"mag"] - pro_out$segstats[pro_match$nn.idx[,1],"mag"],
         ylim=c(-0.2,0.2), xlab='True [mag]', ylab='ProFound - True [mag]')
 points(model_core[pro_match$nn.idx[,1] > 0,"mag"], model_core[pro_match$nn.idx[,1] > 0,"mag"] - pro_out$segstats[pro_match$nn.idx[,1],"mag_db"],
@@ -122,7 +126,7 @@ legend('topleft', legend=c('Segment','Pro De-blend', 'Ellip De-blend'), col=c('b
 
 Perhaps it is better to look at the 1D mag difference density directly:
 
-```{r, fig.width=8, fig.height=6}
+```{r, fig.width=8, fig.height=6, eval=evalglobal}
 magplot(density(model_core[pro_match$nn.idx[,1] > 0,"mag"] - pro_out$segstats[pro_match$nn.idx[,1],"mag"]),
         xlab='ProFound - True [mag]', ylab='PDF', xlim=c(-0.2,0.2), ylim=c(0,23))
 lines(density(model_core[pro_match$nn.idx[,1] > 0,"mag"] - pro_out$segstats[pro_match$nn.idx[,1],"mag_db"]), col='red')
@@ -136,7 +140,7 @@ It's interesting to note that expanding the apertures has little affect on the f
 
 As you can see, the nominal apertures now massively overlap on sky, but the de-blending weighting helps to control this:
 
-```{r, fig.width=8, fig.height=8}
+```{r, fig.width=8, fig.height=8, eval=evalglobal}
 magimage(ExampleImage) #for reference to see where profoundProFound is putting the apertures
 
 magimage(profoundEllipWeight(ellip_ref$xcen, ellip_ref$ycen,
@@ -146,7 +150,7 @@ magimage(profoundEllipWeight(ellip_ref$xcen, ellip_ref$ycen,
   ellip_ref$R100*2, ellip_ref$ang, ellip_ref$axrat, dimx = 1000, dimy = 1000, wt=ellip_ref$flux, rad_re=ellip_ref$R50))
 ```
 
-```{r}
+```{r, eval=evalglobal}
 ellip_flux_deblend_big =  profoundEllipFlux(ExampleImage, ellip_ref$xcen, ellip_ref$ycen,
   ellip_ref$R100*2, ellip_ref$ang, ellip_ref$axrat, deblend=TRUE, wt=ellip_ref$flux, rad_re=ellip_ref$R50)
 ellip_mag_deblend_big = profoundFlux2Mag(ellip_flux_deblend_big)
@@ -154,7 +158,7 @@ ellip_mag_deblend_big = profoundFlux2Mag(ellip_flux_deblend_big)
 
 Overall the performance of the larger apertures is very similar:
 
-```{r, fig.width=8, fig.height=6}
+```{r, fig.width=8, fig.height=6, eval=evalglobal}
 magplot(model_core[pro_match$nn.idx[,1] > 0,"mag"], model_core[pro_match$nn.idx[,1] > 0,"mag"] - ellip_mag_deblend[pro_match$nn.idx[,1]],
         xlim=c(15,21), ylim=c(-0.2,0.2), col='blue', xlab='ProFound - True [mag]', ylab='PDF')
 points(model_core[pro_match$nn.idx[,1] > 0,"mag"], model_core[pro_match$nn.idx[,1] > 0,"mag"] - ellip_mag_deblend_big[pro_match$nn.idx[,1]],
@@ -162,7 +166,7 @@ points(model_core[pro_match$nn.idx[,1] > 0,"mag"], model_core[pro_match$nn.idx[,
 legend('topleft', legend=c('Ellip De-blend', 'Ellip De-blend Big'), col=c('blue','darkgreen'), pch=1)
 ```
 
-```{r, fig.width=8, fig.height=6}
+```{r, fig.width=8, fig.height=6, eval=evalglobal}
 magplot(density(model_core[pro_match$nn.idx[,1] > 0,"mag"] - ellip_mag_deblend[pro_match$nn.idx[,1]]),
         col='blue', xlab='ProFound - True [mag]', ylab='PDF', xlim=c(-0.2,0.2), ylim=c(0,23))
 lines(density(model_core[pro_match$nn.idx[,1] > 0,"mag"] - ellip_mag_deblend_big[pro_match$nn.idx[,1]]), col='darkgreen')
@@ -173,7 +177,7 @@ legend('topleft', legend=c('Ellip De-blend', 'Ellip De-blend Big'), col=c('blue'
 
 When fitting totally unresolved data, **ProFound** already comes with **profoundFitMagPSF**. This correctly deblends flux into objects using the known PSF of the image.
 
-```{r}
+```{r, eval=evalglobal}
 s250_im = Rfits_read_image(system.file("extdata", 'IRdata/s250_im.fits',
                                        package="ProFound"))
 s250_psf = Rfits_read_image(system.file("extdata",'IRdata/s250_psf.fits',
@@ -192,7 +196,7 @@ newmag = profoundFitMagPSF(RAcen=pro_s250$segstats$RAcen, Deccen=pro_s250$segsta
                          verbose=TRUE, redosky=FALSE, magzero=magzero_s250)
 ```
 
-```{r, fig.width=8, fig.height=8}
+```{r, fig.width=8, fig.height=8, eval=evalglobal}
 magimage(s250_im$imDat - newmag$finalmodel, qdiff=T)
 ```
 
@@ -200,7 +204,7 @@ It is worth noting how similar a job we can do using the new **profoundAperFlux*
 
 First we need to specifying some properties of the PSF:
 
-```{r, fig.width=8, fig.height=8}
+```{r, fig.width=8, fig.height=8, eval=evalglobal}
 R50 = 1.7 #Re in pixels
 R100 = 5 #Maximum radius to use for the apertures
 
@@ -213,7 +217,7 @@ magimage(profoundAperWeight(newmag$psfstats$xcen, newmag$psfstats$ycen,
   R100, dimx = 120, dimy = 120, rad_re=R50, nser=0.5))
 ```
 
-```{r}
+```{r, eval=evalglobal}
 sky = sum(s250_im$imDat - newmag$finalmodel)/(120^2)
 
 newflux_db = profoundAperFlux(s250_im$imDat - sky, newmag$psfstats$xcen, newmag$psfstats$ycen,
@@ -233,14 +237,14 @@ newmag_wt = profoundFlux2Mag(newflux_wt, magzero=magzero_s250)
 
 And now we can compare how it looks:
 
-```{r, fig.width=8, fig.height=6}
+```{r, fig.width=8, fig.height=6, eval=evalglobal}
 magplot(newmag$psfstats$mag, newmag$psfstats$mag - newmag_wt, xlim=c(11,17), ylim=c(-2,2),
         xlab='FitMagPSF [mag]', ylab='PSF - DB [mag]')
 ```
 
 We can even make a reasonable difference image using the weight map:
 
-```{r, fig.width=8, fig.height=8}
+```{r, fig.width=8, fig.height=8, eval=evalglobal}
 magimage(s250_im$imDat, qdiff=TRUE)
 
 magimage(profoundAperWeight(newmag$psfstats$xcen, newmag$psfstats$ycen,
