--- a/vignettes/ProFound-Source-Finding.Rmd
+++ b/vignettes/ProFound-Source-Finding.Rmd
@@ -61,8 +61,8 @@ The **ProFound** source finding and image utilities suite covers the following f
 - profoundMag2Mu: Convert from magnitude to central surface brightness
 - profoundMu2Mag: Convert from central surface brightness to magnitude
 - profoundSB2Flux: Convert from surface brightness to flux
-- profoundAperCover: Create circular aperture coverage maps
-- profoundEllipCover: Create elliptical aperture coverage maps
+- profoundAperWeight: Create circular aperture weight maps
+- profoundEllipWeight: Create elliptical aperture weight maps
 
 ## Basic ProFound Usage
 
