--- a/vignettes/ProFound-Blender.Rmd
+++ b/vignettes/ProFound-Blender.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 evalglobal=FALSE
 ```
 
-```{r}
+```{r, eval=evalglobal}
 library(ProFound)
 library(ProFit)
 library(RANN)
